--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "warp-cwd"
+name = "swarp"
 version = "0.1.0"
 authors = ["Eduardo Tongson <propolice@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,8 @@ edition = "2018"
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
 warp = "0.2.5"
+
+[profile.release]
+codegen-units = 1
+lto = true
+debug = false
