--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "swarp"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Eduardo Tongson <propolice@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-tokio = { version = "0.2", features = ["full"] }
-warp = "0.2.5"
+tokio = { version = "1.0", features = ["fs", "sync", "time"] }
+warp = "0.3.1"
 
 [profile.release]
 codegen-units = 1
