--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Eduardo Tongson <propolice@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-tokio = { version = "1.0", features = ["fs", "sync", "time"] }
+tokio = { version = "1.0", features = ["full"] }
 warp = "0.3.1"
 
 [profile.release]
